<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上墨子</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码密码</string>
    <string name="login">登录</string>
    <string name="auto_save_password">记住密码</string>
    <string name="register22">注册账号></string>
    <string name="more_login_setting">创建美丽家园从你我做起</string>
    <string name="ok_register">注册</string>
    <string name="inputremainder1">请输入密码</string>
    <string name="passwordremainder1">*密码</string>
    <string name="inputnickname">请输入昵称</string>
    <string name="returnremainder">返回</string>
    <string name="register_tip">温馨提示: \n带*项为必填项\n填写邮箱方便您找回密码以及了解更多QQ信息</string>
    <string name="register_tip2">温馨提示: \n认真填写信息更有机会遇见有缘人哦</string>
    <string name="addphonenum">请输入手机号</string>
    <string name="addfriendaccount">请输入手机号</string>
    <string name="phonenum">手机号</string>
    <string name="authcode">验证码</string>
    <string name="friendaccount">亲情号</string>
    <string name="nickname">昵称</string>
    <string name="okpassword">*确认 密码</string>
    <string name="password1">*密码</string>
    <string name="iargree">我已阅读并同意</string>
    <string name="useragreement">《用户注册协议》</string>
    <string name="inputmessageauthcode">请输入短信中的验证码</string>
    <string name="resend">重发</string>
    <string name="remainder">好烦哦</string>
    <string name="newpassword">新密码</string>
    <string name="prompt3">8—20位数字和字母组成</string>
    <string name="affirmpassword">确认密码</string>
    <string name="ok">OK</string>
    <string name="register">注 册</string>
    <string name="nextstep">下一步</string>
    <string name="groupname">群组名</string>
    <string name="inputpassword">请输入密码</string>
    <string name="nokown">KoBe</string>
    <string name="messge">消息</string>
    <string name="search">搜索</string>
    <string name="namedemo">王东宇</string>
    <string name="timedemo">21:21</string>
    <string name="messagedemo">你还好吗?</string>
    <string name="sweeponesweep">扫一扫</string>
    <string name="cancel">取消</string>
    <string name="editdata">编辑资料</string>
    <string name="complete">完成</string>
    <string name="noknow">未知</string>
    <string name="gender">性别</string>
    <string name="man">男</string>
    <string name="age">年龄</string>
    <string name="agedemo">22岁</string>
    <string name="webcam">摄像头</string>
    <string name="have">有</string>
    <string name="email">邮箱</string>
    <string name="school">学校</string>
    <string name="beifanguniversity">北方学院</string>
    <string name="address">所在地</string>
    <string name="addressdemo">张家口桥东区</string>
    <string name="findpeoplebyaccount">按账号查找陌生人</string>
    <string name="newfriends">新朋友</string>
    <string name="help">帮助</string>
    <string name="requestaddnewfriend">请求加为好友</string>
    <string name="rootresource">来源:</string>
    <string name="haveagreed">已同意</string>
    <string name="agree">同意</string>
    <string name="exitapplication">退出应用</string>
    <string name="singlesetting">个人设置</string>
    <string name="friendapplication">好友申请</string>
    <string name="twentitytwo">22岁</string>
    <string name="hebeihengshui">河北衡水</string>
    <string name="additionalmessage">附加消息</string>
    <string name="reply">回复</string>
    <string name="resource">来源</string>
    <string name="addbyaccount">账号查找</string>
    <string name="applicationstatue">申请状态</string>
    <string name="refuse">拒绝</string>
    <string name="reportuser">举报该用户</string>
    <string name="friendrequestresult">好友请求结果</string>
    <string name="nonamed">未命名</string>
    <string name="frienddetail">好友资料</string>
    <string name="more_things">更多</string>
    <string name="remark">备注</string>
    <string name="QQphone">电话</string>
    <string name="sendmessage">发送消息</string>
    <string name="return2">返回</string>
    <string name="send2">发送</string>
    <string name="time">时间</string>
    <string name="online">在线</string>
    <string name="invisible">隐身</string>
    <string name="exitcurrentaccount">退出当前账号</string>
    <string name="remaindermessagedemo">正在拼了命的加载....亲,wait...</string>
    <string name="messageremainder1">冷笑话</string>
    <string name="message1">“圣诞节快到了，你放假吗？”
\n“不放！”
\n“咦，你不是在外企吗？”
\n“对啊，在外面乞讨，真TM冷啊！”</string>
    <string name="three">3</string>
    <string name="downpullupdate">下拉刷新</string>
    <string name="lastupdatetime">最后刷新时间:未知</string>
    <string name="loading">加载中</string>
    <string name="chatsettingtitle">聊天设置</string>
    <string name="signature">谁人练的狮吼功？</string>
    <string name="creatediscussiongroup">创建讨论组</string>
    <string name="chatrecord">聊天记录</string>
    <string name="chatbackground">聊天背景</string>
    <string name="shieldfriend">屏蔽此人</string>
    <string name="deletefriend">删除好友</string>
    <string name="more">更多</string>
    <string name="moredetail">更多资料</string>
    <string name="grouping">分组</string>
    <string name="chatrecordtitle">聊天记录</string>
    <string name="pagenumdemo1">1/2</string>
    <string name="export">导出</string>
    <string name="delete">删除</string>
    <string name="swich_open">开</string>
    <string name="swich_close">关</string>
    <string name="create_group">创建群</string>
    <string name="create_group_hint">输入群名称</string>
    <string name="title_activity_create_group">创建群</string>
</resources>
