<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/frienddetail_btn_return"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/returnremainder"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/editdata_tv_titlename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/frienddetail"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/frienddetail_btn_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="@string/more"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/nickname" />

            <TextView
                android:id="@+id/frienddetail_tv_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/noknow" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/frienddetail_tv_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/man" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/age" />

            <TextView
                android:id="@+id/frienddetail_tv_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/agedemo" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_webcam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/webcam" />

            <TextView
                android:id="@+id/frienddetail_tv_webcam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/have" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/email" />

            <TextView
                android:id="@+id/frienddetail_tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/noknow" />
            
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_school"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/school" />

            <TextView
                android:id="@+id/frienddetail_tv_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/beifanguniversity" />
            
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/frienddetail_tv_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/addressdemo" />
            
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:weightSum="2"
        >
        <Button 
            android:id="@+id/frienddetail_btn_qqphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="3dp"
            android:background="#FAEBD7"
            android:text="@string/QQphone"/>
        <Button 
            android:id="@+id/frienddetail_btn_sendmessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="#FA8072"
            android:text="@string/sendmessage"/>
    </LinearLayout>

</LinearLayout>
