<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/editdata_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/editdata_tv_titlename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/editdata"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/editdata_btn_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="@string/complete"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/nickname" />

            <EditText
                android:id="@+id/editdata_et_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/noknow" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/gender" />

            <EditText
                android:id="@+id/editdata_et_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/man" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/age" />

            <EditText
                android:id="@+id/editdata_et_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/agedemo"
                tools:ignore="DuplicateIds" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_webcam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/webcam" />

            <EditText
                android:id="@+id/editdata_et_webcam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/have" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editdata_et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/noknow" />
            
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_school"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/school" />

            <EditText
                android:id="@+id/editdata_et_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/beifanguniversity"
                tools:ignore="DuplicateIds" />
            
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/editdata_tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/address" />

            <EditText
                android:id="@+id/editdata_et_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="15dip"
                android:paddingLeft="10dip"
                android:background="@android:color/white"
                android:text="@string/addressdemo" />
            
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/register_tip2"
            android:textColor="#FFA500"
            android:textSize="14.0sp" />
    </LinearLayout>
	
</LinearLayout>